--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,6 +15,7 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
+      "@guitar-shop/config": ["libs/config/src/index.ts"],
       "@guitar-shop/dtos": ["libs/dtos/src/index.ts"],
       "@guitar-shop/types": ["libs/types/src/index.ts"]
     }
