--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@nestjs/config": "3.2.0",
     "@nestjs/core": "^10.0.2",
     "@nestjs/platform-express": "^10.0.2",
+    "@prisma/client": "^5.9.1",
     "axios": "^1.6.0",
     "class-transformer": "0.5.1",
     "joi": "17.12.1",
@@ -57,6 +58,7 @@
     "jsdom": "~22.1.0",
     "nx": "18.0.4",
     "prettier": "^2.6.2",
+    "prisma": "5.9.1",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
     "typescript": "~5.3.2",
