--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -17,6 +17,7 @@
     "paths": {
       "@guitar-shop/config": ["libs/config/src/index.ts"],
       "@guitar-shop/dtos": ["libs/dtos/src/index.ts"],
+      "@guitar-shop/models": ["libs/models/src/index.ts"],
       "@guitar-shop/types": ["libs/types/src/index.ts"]
     }
   },
