--- a/nx.json
+++ b/nx.json
@@ -62,5 +62,12 @@
         "linter": "eslint"
       }
     }
+  },
+  "targetDefaults": {
+    "@nx/esbuild:esbuild": {
+      "cache": true,
+      "dependsOn": ["^build"],
+      "inputs": ["production", "^production"]
+    }
   }
 }
