--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "@guitar-shop/source",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "license": "MIT",
   "scripts": {
-    "cli": "npx nx run cli:serve",
+    "cli": "npx tsx apps/cli/src/main.ts",
     "backend": "npx nx serve backend",
     "frontend": "npx nx serve frontend"
   },
@@ -15,6 +15,7 @@
     "@nestjs/platform-express": "^10.0.2",
     "@prisma/client": "^5.9.1",
     "axios": "^1.6.0",
+    "chalk": "5.3.0",
     "class-transformer": "0.5.1",
     "joi": "17.12.1",
     "react": "18.2.0",
@@ -66,7 +67,8 @@
     "prettier": "^2.6.2",
     "prisma": "5.9.1",
     "ts-jest": "^29.1.0",
-    "ts-node": "10.9.1",
+    "ts-node": "10.9.2",
+    "tsx": "4.7.1",
     "typescript": "~5.3.2",
     "vite": "~5.0.0",
     "vitest": "^1.0.4",
