--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
     "@nestjs/common": "^10.0.2",
     "@nestjs/config": "3.2.0",
     "@nestjs/core": "^10.0.2",
+    "@nestjs/passport": "10.0.3",
     "@nestjs/platform-express": "^10.0.2",
     "@prisma/client": "^5.9.1",
     "axios": "^1.6.0",
     "chalk": "5.3.0",
     "class-transformer": "0.5.1",
     "joi": "17.12.1",
+    "passport-anonymous": "1.0.1",
+    "passport-jwt": "4.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "reflect-metadata": "^0.1.13",
@@ -46,6 +49,8 @@
     "@testing-library/react": "14.0.0",
     "@types/jest": "^29.4.0",
     "@types/node": "~18.16.9",
+    "@types/passport-anonymous": "1.0.5",
+    "@types/passport-jwt": "4.0.1",
     "@types/react": "18.2.33",
     "@types/react-dom": "18.2.14",
     "@typescript-eslint/eslint-plugin": "^6.13.2",
