--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -16,6 +16,7 @@
     "baseUrl": ".",
     "paths": {
       "@guitar-shop/config": ["libs/config/src/index.ts"],
+      "@guitar-shop/core": ["libs/core/src/index.ts"],
       "@guitar-shop/dtos": ["libs/dtos/src/index.ts"],
       "@guitar-shop/models": ["libs/models/src/index.ts"],
       "@guitar-shop/types": ["libs/types/src/index.ts"]
