--- a/.env-example
+++ b/.env-example
@@ -22,3 +22,6 @@ MAIL_SMTP_PORT=8025
 MAIL_USER_NAME=name
 MAIL_USER_PASSWORD=password
 MAIL_FROM=localhost@local.local
+DEFAULT_USER_NAME=admin
+DEFAULT_USER_EMAIL=admin@local.local
+DEFAULT_USER_PASSWORD=admin
