--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@nestjs/platform-express": "^10.0.2",
     "@prisma/client": "^5.9.1",
     "axios": "^1.6.0",
+    "bcrypt": "5.1.1",
     "chalk": "5.3.0",
     "class-transformer": "0.5.1",
     "joi": "17.12.1",
@@ -47,6 +48,7 @@
     "@swc/core": "~1.3.85",
     "@swc/helpers": "~0.5.2",
     "@testing-library/react": "14.0.0",
+    "@types/bcrypt": "5.0.2",
     "@types/jest": "^29.4.0",
     "@types/node": "~18.16.9",
     "@types/passport-anonymous": "1.0.5",
