feat: backend user create

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -18,6 +18,7 @@
       "@guitar-shop/config": ["libs/config/src/index.ts"],
       "@guitar-shop/core": ["libs/core/src/index.ts"],
       "@guitar-shop/dtos": ["libs/dtos/src/index.ts"],
+      "@guitar-shop/helpers": ["libs/helpers/src/index.ts"],
       "@guitar-shop/models": ["libs/models/src/index.ts"],
       "@guitar-shop/types": ["libs/types/src/index.ts"]
     }
