--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@nestjs/common": "^10.0.2",
     "@nestjs/config": "3.2.0",
     "@nestjs/core": "^10.0.2",
+    "@nestjs/jwt": "10.2.0",
     "@nestjs/passport": "10.0.3",
     "@nestjs/platform-express": "^10.0.2",
     "@prisma/client": "^5.9.1",
@@ -19,6 +20,7 @@
     "bcrypt": "5.1.1",
     "chalk": "5.3.0",
     "class-transformer": "0.5.1",
+    "dayjs": "1.11.10",
     "joi": "17.12.1",
     "passport-anonymous": "1.0.1",
     "passport-jwt": "4.0.1",
