--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "bcrypt": "5.1.1",
     "chalk": "5.3.0",
     "class-transformer": "0.5.1",
+    "class-validator": "0.14.1",
     "dayjs": "1.11.10",
     "joi": "17.12.1",
     "passport-anonymous": "1.0.1",
