--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "class-transformer": "0.5.1",
     "class-validator": "0.14.1",
     "dayjs": "1.11.10",
+    "form-data": "4.0.0",
     "joi": "17.12.1",
     "passport-anonymous": "1.0.1",
     "passport-jwt": "4.0.1",
@@ -53,6 +54,7 @@
     "@testing-library/react": "14.0.0",
     "@types/bcrypt": "5.0.2",
     "@types/jest": "^29.4.0",
+    "@types/multer": "1.4.11",
     "@types/node": "~18.16.9",
     "@types/passport-anonymous": "1.0.5",
     "@types/passport-jwt": "4.0.1",
