feat: backend file uploading

--- a/.env-example
+++ b/.env-example
@@ -25,3 +25,4 @@ MAIL_FROM=localhost@local.local
 DEFAULT_USER_NAME=admin
 DEFAULT_USER_EMAIL=admin@local.local
 DEFAULT_USER_PASSWORD=admin
+UPLOAD_DIRECTORY_PATH=/home/justdoit/Desktop/coding/htmlacademy/2299899-guitar-shop/uploads
