--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@swc/helpers": "~0.5.2",
     "@testing-library/react": "14.0.0",
     "@types/bcrypt": "5.0.2",
+    "@types/fs-extra": "11.0.4",
     "@types/jest": "^29.4.0",
     "@types/multer": "1.4.11",
     "@types/node": "~18.16.9",
