--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "joi": "17.12.1",
     "passport-anonymous": "1.0.1",
     "passport-jwt": "4.0.1",
+    "passport-local": "1.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "reflect-metadata": "^0.1.13",
@@ -59,6 +60,7 @@
     "@types/node": "~18.16.9",
     "@types/passport-anonymous": "1.0.5",
     "@types/passport-jwt": "4.0.1",
+    "@types/passport-local": "1.0.38",
     "@types/react": "18.2.33",
     "@types/react-dom": "18.2.14",
     "@typescript-eslint/eslint-plugin": "^6.13.2",
