--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "private": true,
   "dependencies": {
+    "@nestjs-modules/mailer": "1.10.3",
     "@nestjs/common": "^10.0.2",
     "@nestjs/config": "3.2.0",
     "@nestjs/core": "^10.0.2",
