--- a/.env-example
+++ b/.env-example
@@ -22,3 +22,5 @@ DEFAULT_USER_NAME=admin
 DEFAULT_USER_EMAIL=admin@local.local
 DEFAULT_USER_PASSWORD=admin
 UPLOAD_DIRECTORY_PATH=/home/justdoit/Desktop/coding/htmlacademy/2299899-guitar-shop/uploads
+VITE_FRONTEND_SERVER_PORT=3000
+VITE_FRONTEND_PREVIEW_PORT=3100
