--- a/package.json
+++ b/package.json
@@ -24,12 +24,16 @@
     "class-validator": "0.14.1",
     "dayjs": "1.11.10",
     "form-data": "4.0.0",
+    "history": "5.3.0",
     "joi": "17.12.1",
     "passport-anonymous": "1.0.1",
     "passport-jwt": "4.0.1",
     "passport-local": "1.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-helmet-async": "2.0.4",
+    "react-redux": "9.1.0",
+    "react-router-dom": "6.22.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0",
     "tslib": "^2.3.0"
