--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@nestjs/passport": "10.0.3",
     "@nestjs/platform-express": "^10.0.2",
     "@prisma/client": "^5.9.1",
+    "@reduxjs/toolkit": "2.2.0",
     "axios": "^1.6.0",
     "bcrypt": "5.1.1",
     "chalk": "5.3.0",
@@ -34,6 +35,7 @@
     "react-helmet-async": "2.0.4",
     "react-redux": "9.1.0",
     "react-router-dom": "6.22.0",
+    "react-toastify": "10.0.4",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0",
     "tslib": "^2.3.0"
