--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-helmet-async": "2.0.4",
     "react-redux": "9.1.0",
     "react-router-dom": "6.22.0",
+    "react-tabs": "6.0.2",
     "react-toastify": "10.0.4",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0",
