--- a/package.json
+++ b/package.json
@@ -77,7 +77,7 @@
     "@vitest/coverage-v8": "^1.0.4",
     "@vitest/ui": "^1.0.4",
     "esbuild": "^0.19.2",
-    "eslint": "~8.48.0",
+    "eslint": "8.48.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-import": "2.27.5",
     "eslint-plugin-jsx-a11y": "6.7.1",
