feat: publishDate in create and update guitar

--- a/package.json
+++ b/package.json
@@ -3,12 +3,16 @@
   "version": "1.0.0",
   "license": "MIT",
   "scripts": {
-    "cli": "npx tsx apps/cli/src/main.ts",
+    "cli": "npx nx run cli:build && node dist/apps/cli/main.js",
     "backend": "npx nx serve backend",
-    "frontend": "npx nx serve frontend"
+    "frontend": "npx nx serve frontend",
+    "backend:prod": "npx nx serve backend -c production",
+    "frontend:prod": "npx nx serve frontend -c production",
+    "lint": ""
   },
   "private": true,
   "dependencies": {
+    "@faker-js/faker": "8.4.1",
     "@nestjs-modules/mailer": "1.10.3",
     "@nestjs/common": "^10.0.2",
     "@nestjs/config": "3.2.0",
@@ -20,7 +24,7 @@
     "@reduxjs/toolkit": "2.2.0",
     "axios": "^1.6.0",
     "bcrypt": "5.1.1",
-    "chalk": "5.3.0",
+    "chalk": "4.1.2",
     "class-transformer": "0.5.1",
     "class-validator": "0.14.1",
     "dayjs": "1.11.10",
