--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "form-data": "4.0.0",
     "history": "5.3.0",
     "joi": "17.12.1",
+    "lodash": "4.17.21",
     "passport-anonymous": "1.0.1",
     "passport-jwt": "4.0.1",
     "passport-local": "1.0.0",
@@ -68,6 +69,7 @@
     "@types/bcrypt": "5.0.2",
     "@types/fs-extra": "11.0.4",
     "@types/jest": "^29.4.0",
+    "@types/lodash": "4.14.202",
     "@types/multer": "1.4.11",
     "@types/node": "~18.16.9",
     "@types/passport-anonymous": "1.0.5",
