--- a/.env-example
+++ b/.env-example
@@ -1,16 +1,13 @@
 NODE_ENV=development
-APP_PORT=3001
-POSTGRES_PORT=5432
-POSTGRES_USER=admin
-POSTGRES_PASSWORD=123456
-POSTGRES_DB=readme_blog
-PGADMIN_DEFAULT_EMAIL=local@local.local
-PGADMIN_DEFAULT_PASSWORD=a12345678
-PGADMIN_PORT=8081
+BACKEND_PORT=3001
+
+UPLOAD_DIRECTORY_PATH=/home/justdoit/Desktop/coding/htmlacademy/2299899-guitar-shop/uploads
+
 JWT_ACCESS_TOKEN_SECRET=cgvhbjnkg8nkrfhonjlwfspl
 JWT_ACCESS_TOKEN_EXPIRES_IN=5m
 JWT_REFRESH_TOKEN_SECRET=hbfsvojipfjvpjpjpgoportkop
 JWT_REFRESH_TOKEN_EXPIRES_IN=5m
+
 FAKE_SMTP_SERVER_PORT_1=8025
 FAKE_SMTP_SERVER_PORT_2=1083
 MAIL_SMTP_HOST=localhost
@@ -18,9 +15,18 @@ MAIL_SMTP_PORT=8025
 MAIL_USER_NAME=name
 MAIL_USER_PASSWORD=password
 MAIL_FROM=localhost@local.local
+
+POSTGRES_PORT=5432
+POSTGRES_USER=admin
+POSTGRES_PASSWORD=123456
+POSTGRES_DB=guitar_shop
+PGADMIN_DEFAULT_EMAIL=local@local.local
+PGADMIN_DEFAULT_PASSWORD=a12345678
+PGADMIN_PORT=8081
+
 DEFAULT_USER_NAME=admin
 DEFAULT_USER_EMAIL=admin@local.local
 DEFAULT_USER_PASSWORD=admin
-UPLOAD_DIRECTORY_PATH=/home/justdoit/Desktop/coding/htmlacademy/2299899-guitar-shop/uploads
+
 VITE_FRONTEND_SERVER_PORT=3000
 VITE_FRONTEND_PREVIEW_PORT=3100
