--- a/.env-example
+++ b/.env-example
@@ -1,4 +1,5 @@
 NODE_ENV=development
+HOST=localhost
 BACKEND_PORT=3001
 
 UPLOAD_DIRECTORY_PATH=/home/justdoit/Desktop/coding/htmlacademy/2299899-guitar-shop/uploads
@@ -28,5 +29,6 @@ DEFAULT_USER_NAME=admin
 DEFAULT_USER_EMAIL=admin@local.local
 DEFAULT_USER_PASSWORD=admin
 
-VITE_FRONTEND_SERVER_PORT=3000
+VITE_FRONTEND_HOST=localhost
+VITE_FRONTEND_PORT=3000
 VITE_FRONTEND_PREVIEW_PORT=3100
