--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@nestjs/jwt": "10.2.0",
     "@nestjs/passport": "10.0.3",
     "@nestjs/platform-express": "^10.0.2",
+    "@nestjs/swagger": "7.3.0",
     "@prisma/client": "^5.9.1",
     "@reduxjs/toolkit": "2.2.0",
     "axios": "^1.6.0",
