feat: start project section in readme.md

--- a/.env-example
+++ b/.env-example
@@ -24,6 +24,7 @@ POSTGRES_DB=guitar_shop
 PGADMIN_DEFAULT_EMAIL=local@local.local
 PGADMIN_DEFAULT_PASSWORD=a12345678
 PGADMIN_PORT=8081
+DATABASE_URL=postgresql://admin:123456@localhost:5432/guitar_shop?schema=public
 
 DEFAULT_USER_NAME=admin
 DEFAULT_USER_EMAIL=admin@local.local
