--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -21,6 +21,7 @@
       "@guitar-shop/core": ["libs/core/src/index.ts"],
       "@guitar-shop/dtos": ["libs/dtos/src/index.ts"],
       "@guitar-shop/helpers": ["libs/helpers/src/index.ts"],
+      "@guitar-shop/logger": ["libs/logger/src/index.ts"],
       "@guitar-shop/models": ["libs/models/src/index.ts"],
       "@guitar-shop/services": ["libs/services/src/index.ts"],
       "@guitar-shop/storage": ["libs/storage/src/index.ts"],
