--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "history": "5.3.0",
     "joi": "17.12.1",
     "lodash": "4.17.21",
+    "nest-winston": "1.9.4",
     "passport-anonymous": "1.0.1",
     "passport-jwt": "4.0.1",
     "passport-local": "1.0.0",
@@ -42,7 +43,9 @@
     "react-toastify": "10.0.4",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0",
-    "tslib": "^2.3.0"
+    "tslib": "^2.3.0",
+    "winston": "3.11.0",
+    "winston-daily-rotate-file": "5.0.0"
   },
   "devDependencies": {
     "@nestjs/schematics": "^10.0.1",
