fix: some errors of deprecated api and cors for firefox

--- a/apps/frontend/tsconfig.app.json
+++ b/apps/frontend/tsconfig.app.json
@@ -24,7 +24,7 @@
     "src/**/*.jsx",
     "src/**/*.ts",
     "src/**/*.tsx",
-    "vite.config.ts",
+    "vite.config.mts",
     "../../libs/services/src/lib/api.ts",
     "../../libs/services/src/lib/token.ts",
     "../../libs/services/src/lib/browser-history.ts"
