fix: codestyle issues

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "cli": "npx nx run cli:build && node dist/apps/cli/main.js",
     "backend": "npx nx serve backend",
-    "frontend": "npx nx serve frontend"
+    "frontend": "npx nx serve frontend",
+    "lint": "npx eslint apps/** libs/**"
   },
   "private": true,
   "dependencies": {
