--- a/specification/specification.yml
+++ b/specification/specification.yml
@@ -1,7 +1,7 @@
 ---
 openapi: 3.0.0
 paths:
-  "/api/user/register":
+  '/api/user/register':
     post:
       operationId: UserController_create
       parameters: []
@@ -10,19 +10,19 @@ paths:
         content:
           application/json:
             schema:
-              "$ref": "#/components/schemas/CreateUserDto"
+              '$ref': '#/components/schemas/CreateUserDto'
       responses:
-        "201":
+        '201':
           description: New user created
-        "400":
+        '400':
           description: User creation validation error
-        "409":
+        '409':
           description: User already exists conflict
       tags:
         - users
       security:
         - basic: []
-  "/api/user/login":
+  '/api/user/login':
     post:
       operationId: UserController_login
       parameters: []
@@ -31,43 +31,43 @@ paths:
         content:
           application/json:
             schema:
-              "$ref": "#/components/schemas/LoginUserDto"
+              '$ref': '#/components/schemas/LoginUserDto'
       responses:
-        "201":
+        '201':
           description: Login successfully
           content:
             application/json:
               schema:
-                "$ref": "#/components/schemas/UserRdo"
-        "400":
+                '$ref': '#/components/schemas/UserRdo'
+        '400':
           description: Login validation error
-        "401":
+        '401':
           description: Wrong password
-        "404":
+        '404':
           description: Email not found
       tags:
         - users
       security:
         - basic: []
-  "/api/user/check":
+  '/api/user/check':
     post:
       operationId: UserController_checkToken
       parameters: []
       responses:
-        "201":
+        '201':
           description: Check user token
           content:
             application/json:
               schema:
-                "$ref": "#/components/schemas/TokenPayloadRdo"
-        "401":
+                '$ref': '#/components/schemas/TokenPayloadRdo'
+        '401':
           description: Unauthorized
       tags:
         - users
       security:
         - basic: []
         - bearer: []
-  "/api/user/refresh":
+  '/api/user/refresh':
     post:
       operationId: UserController_refreshToken
       parameters:
@@ -78,16 +78,16 @@ paths:
           schema:
             type: string
       responses:
-        "201":
+        '201':
           description: Refresh token success
-        "401":
+        '401':
           description: Unauthorized
       tags:
         - users
       security:
         - basic: []
         - bearer: []
-  "/api/guitars":
+  '/api/guitars':
     get:
       operationId: GuitarController_show
       parameters:
@@ -149,12 +149,12 @@ paths:
             items:
               type: string
       responses:
-        "200":
+        '200':
           description: Guitars list pagination
           content:
             application/json:
               schema:
-                "$ref": "#/components/schemas/GuitarPaginationRdo"
+                '$ref': '#/components/schemas/GuitarPaginationRdo'
       tags:
         - guitars
       security:
@@ -178,26 +178,26 @@ paths:
         content:
           multipart/form-data:
             schema:
-              "$ref": "#/components/schemas/CreateGuitarDto"
+              '$ref': '#/components/schemas/CreateGuitarDto'
       responses:
-        "201":
+        '201':
           description: New post created
           content:
             application/json:
               schema:
-                "$ref": "#/components/schemas/GuitarRdo"
-        "400":
+                '$ref': '#/components/schemas/GuitarRdo'
+        '400':
           description: Bad request, failed request validation
-        "401":
+        '401':
           description: Required jwt token authorization
-        "415":
+        '415':
           description: Photo file format not unsupported
       tags:
         - guitars
       security:
         - basic: []
         - bearer: []
-  "/api/guitars/{id}":
+  '/api/guitars/{id}':
     get:
       operationId: GuitarController_showById
       parameters:
@@ -207,13 +207,13 @@ paths:
           schema:
             type: string
       responses:
-        "200":
+        '200':
           description: Single Guitar
           content:
             application/json:
               schema:
-                "$ref": "#/components/schemas/GuitarRdo"
-        "404":
+                '$ref': '#/components/schemas/GuitarRdo'
+        '404':
           description: Guitar with provided id not found
       tags:
         - guitars
@@ -243,22 +243,22 @@ paths:
         content:
           application/json:
             schema:
-              "$ref": "#/components/schemas/UpdateGuitarDto"
+              '$ref': '#/components/schemas/UpdateGuitarDto'
           multipart/form-data:
             schema:
-              "$ref": "#/components/schemas/UpdateGuitarDto"
+              '$ref': '#/components/schemas/UpdateGuitarDto'
       responses:
-        "200":
+        '200':
           description: Guitar updated successfully
           content:
             application/json:
               schema:
-                "$ref": "#/components/schemas/GuitarRdo"
-        "400":
+                '$ref': '#/components/schemas/GuitarRdo'
+        '400':
           description: Bad request, failed request validation
-        "401":
+        '401':
           description: Required jwt token authorization
-        "415":
+        '415':
           description: Photo file format not unsupported
       tags:
         - guitars
@@ -274,18 +274,18 @@ paths:
           schema:
             type: string
       responses:
-        "204":
+        '204':
           description: Guitar deleted
-        "401":
+        '401':
           description: Required jwt token authorization
-        "404":
+        '404':
           description: Guitar with provided id not found
       tags:
         - guitars
       security:
         - basic: []
         - bearer: []
-  "/api/guitars/{id}/photo":
+  '/api/guitars/{id}/photo':
     get:
       operationId: GuitarController_getPhoto
       parameters:
@@ -295,13 +295,13 @@ paths:
           schema:
             type: string
       responses:
-        "200":
+        '200':
           description: Photo base64 url
           content:
             application/json:
               schema:
                 type: string
-        "404":
+        '404':
           description: Photo file not found
       tags:
         - guitars
@@ -310,7 +310,7 @@ paths:
 info:
   title: Guitar Shop REST API "Backend" service
   description: Guitar Shop REST API "Backend" service
-  version: "1.0"
+  version: '1.0'
   contact: {}
 tags: []
 servers: []
@@ -335,7 +335,7 @@ components:
         password:
           type: string
           description: User's password.
-          example: "123456"
+          example: '123456'
       required:
         - name
         - email
@@ -422,7 +422,7 @@ components:
         vendorCode:
           type: string
           description: Guitar vendor code.
-          example: "123456789"
+          example: '123456789'
         guitarStrings:
           type: number
           description: Guitar strings number.
@@ -435,12 +435,12 @@ components:
           format: date-time
           type: string
           description: Guitar publish date
-          example: "2024-02-16T00:00:00.000Z"
+          example: '2024-02-16T00:00:00.000Z'
         createdAt:
           format: date-time
           type: string
           description: Guitar creation date
-          example: "2024-02-16T00:00:00.000Z"
+          example: '2024-02-16T00:00:00.000Z'
       required:
         - id
         - title
@@ -457,7 +457,7 @@ components:
           description: Guitars list.
           type: array
           items:
-            "$ref": "#/components/schemas/GuitarRdo"
+            '$ref': '#/components/schemas/GuitarRdo'
         totalPages:
           type: number
           description: Pagination total pages.
@@ -502,7 +502,7 @@ components:
         vendorCode:
           type: string
           description: Guitar vendor code.
-          example: "123456789"
+          example: '123456789'
         guitarStrings:
           type: number
           description: Guitar strings number.
@@ -514,7 +514,7 @@ components:
         publishDate:
           type: string
           description: Guitar publish date
-          example: "2024-02-16T00:00:00.000Z"
+          example: '2024-02-16T00:00:00.000Z'
       required:
         - title
         - description
@@ -544,7 +544,7 @@ components:
         vendorCode:
           type: string
           description: Guitar vendor code.
-          example: "123456789"
+          example: '123456789'
         guitarStrings:
           type: number
           description: Guitar strings number.
@@ -556,4 +556,4 @@ components:
         publishDate:
           type: string
           description: Guitar publish date
-          example: "2024-02-16T00:00:00.000Z"
+          example: '2024-02-16T00:00:00.000Z'
